--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "0.0.1",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --mode development --port 8080 --open",
     "build": "tsc && vite build",
     "build:dev": "vite --mode development build",
     "build:prod": "vite --mode production build",
@@ -13,6 +13,9 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "@radix-ui/react-accordion": "^1.1.2",
+    "@radix-ui/react-scroll-area": "^1.0.5",
+    "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@tanstack/react-query": "^5.32.1",
     "@tanstack/react-query-devtools": "^5.32.1",
@@ -53,6 +56,7 @@
     "prettier-plugin-tailwindcss": "0.4.1",
     "tailwindcss": "3.4.1",
     "typescript": "5.0.4",
-    "vite": "4.5.3"
+    "vite": "4.5.3",
+    "vite-plugin-svgr": "^4.2.0"
   }
 }
