--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-scroll-area": "^1.0.5",
+    "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tabs": "^1.0.4",
@@ -45,12 +46,14 @@
     "@typescript-eslint/parser": "5.59.1",
     "@vitejs/plugin-react-swc": "3.3.0",
     "autoprefixer": "10.4.14",
+    "cors": "^2.8.5",
     "eslint": "8.39.0",
     "eslint-config-prettier": "8.8.0",
     "eslint-plugin-i18next": "^6.0.3",
     "eslint-plugin-prettier": "4.2.1",
     "eslint-plugin-react": "7.32.2",
     "eslint-plugin-react-hooks": "4.6.0",
+    "express": "^4.19.2",
     "husky": "^9.0.11",
     "postcss": "8.4.33",
     "prettier": "2.8.8",
