--- a/.github/workflows/deploy_dev.yml
+++ b/.github/workflows/deploy_dev.yml
@@ -35,7 +35,7 @@ jobs:
       - name: Build Docker image
         run: |
           cd azd-frontend/
-          docker build --build-arg VITE_BASE_URL="${{ env.VITE_BASE_URL }}" -t azd_frontend_develop .
+          docker build --build-arg VITE_BASE_URL="${{ env.VITE_BASE_URL }}" --build-arg VITE_API="${{ env.VITE_API }}" -t azd_frontend_develop .
 
       - name: Login to Yandex Cloud Container Registry
         id: login-cr
